--- a/ui/scss/component/_videojs.scss
+++ b/ui/scss/component/_videojs.scss
@@ -187,8 +187,9 @@ $control-bar-icon-size: 0.8rem;
 .vjs-mouse-display {
   color: white !important;
   background-color: lightgrey !important;
-  width: 8px !important;
-  margin-left: -5px !important;
+  background-color: white !important;
+  // width: 8px !important;
+  // margin-left: -5px !important;
 }
 
 .vjs_video_3_ima-ad-container {
