--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -1217,6 +1217,10 @@ img {
     margin-bottom: -1px !important;
     // margin-left:2px !important;
   }
+  .claim-link {
+    width: 40%;
+    margin-top: var(--spacing-xs);
+  }
 }
 .hide-ribbon {
   .claim-tile__repost-author {
@@ -1255,6 +1259,12 @@ button,
 select,
 a {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
+
+.video-js .vjs-volume-level {
+  &::before {
+    color: white !important;
+  }
 }
 
 // Temporary fix for focus-visible
