--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -153,7 +153,7 @@
       width: 225px;
       padding-top: 4px;
       padding-right: 8px;
-      background-color: rgba(var(--color-primary-dynamic), 0.9);
+      background-color: rgba(var(--color-primary-dynamic), 0.8);
       color: var(--color-primary-contrast);
       text-align: center;
       z-index: 1;
@@ -186,6 +186,10 @@
             }
           }
         }
+      }
+
+      .comment__badge {
+        display: none;
       }
     }
 
@@ -1196,7 +1200,7 @@ $claim-preview-progress-bar-height: 5px;
       width: 225px;
       padding-top: 4px;
       padding-right: 8px;
-      background-color: rgba(var(--color-primary-dynamic), 0.9);
+      background-color: rgba(var(--color-primary-dynamic), 0.8);
       color: var(--color-primary-contrast);
       text-align: center;
       z-index: 1;
@@ -1229,6 +1233,10 @@ $claim-preview-progress-bar-height: 5px;
             }
           }
         }
+      }
+
+      .comment__badge {
+        display: none;
       }
     }
   }
