--- a/ui/scss/component/_button.scss
+++ b/ui/scss/component/_button.scss
@@ -29,10 +29,10 @@
     // height:1em;
     margin-top: 1px;
     padding-top: 2px;
-  }
 
-  @media (max-width: $breakpoint-small) {
-    font-size: var(--font-small);
+    @media (max-width: $breakpoint-small) {
+      // font-size: var(--font-small) !important;
+    }
   }
 }
 
@@ -123,7 +123,8 @@ a.button--alt {
   @media (max-width: $breakpoint-small) {
     .button__label {
       div:first-of-type {
-        top: 23% !important;
+        //top: 23% !important;
+        top: 0%;
       }
     }
   }
