--- a/ui/scss/init/_vars.scss
+++ b/ui/scss/init/_vars.scss
@@ -117,7 +117,7 @@
 
 @media (max-width: $breakpoint-small) {
   :root {
-    --font-body: 0.8rem;
+    // --font-body: 0.8rem;
     --body-scrollbar-width: 0px;
   }
 }
