--- a/ui/scss/component/_comments.scss
+++ b/ui/scss/component/_comments.scss
@@ -89,7 +89,7 @@ $thumbnailWidthSmall: 2rem;
 
 .comment__thumbnail-wrapper {
   flex: 0;
-  margin-top: var(--spacing-xxs);
+  // margin-top: var(--spacing-xxs);
 }
 
 .comment__content {
@@ -189,12 +189,22 @@ $thumbnailWidthSmall: 2rem;
     }
   }
 
+  .menu__button {
+    .icon {
+      transition: transform 0.2s;
+    }
+  }
+
   [aria-expanded='true'].menu__button {
     opacity: 1;
-    background: var(--color-header-background);
-    border-radius: var(--border-radius);
+    // background: var(--color-header-background);
+    background-color: rgba(var(--color-header-button-base), 0.9);
+    // border-radius: var(--border-radius);
+    border-radius: 50%;
+    outline: 2px solid var(--color-header-background);
     .icon {
       stroke: var(--color-primary);
+      transform: rotate(90deg);
     }
   }
 }
@@ -342,7 +352,7 @@ $thumbnailWidthSmall: 2rem;
 .comment__menu-option {
   display: flex;
   align-items: center;
-  padding: var(--spacing-s);
+  padding: var(--spacing-xs) var(--spacing-s) var(--spacing-xs) var(--spacing-s);
   font-size: var(--font-xsmall);
 
   .menu__link {
