--- a/ui/scss/component/_textarea-suggestions.scss
+++ b/ui/scss/component/_textarea-suggestions.scss
@@ -86,7 +86,7 @@
 }
 
 .card__main-actions .commentCreate .MuiOutlinedInput-notchedOutline {
-  border: 1px solid var(--color-border) !important;
+  // border: 1px solid var(--color-border) !important;
   border-radius: var(--border-radius) !important;
 }
 
