Add viewed bar in thumbnails.

--- a/ui/scss/all.scss
+++ b/ui/scss/all.scss
@@ -26,6 +26,7 @@
 @import 'component/file-list';
 @import 'component/file-properties';
 @import 'component/file-render';
+@import 'component/file-thumbnail';
 @import 'component/footer';
 @import 'component/form-field';
 @import 'component/header';
