--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -627,6 +627,27 @@ img {
 .homePage-wrapper__section-title {
   display: flex;
   justify-content: space-between;
+
+  @media (max-width: $breakpoint-small) {
+    button {
+      right: calc(var(--spacing-xs) * -1);
+      .button__content {
+        padding: 10px;
+        background-color: var(--color-header-background);
+        height: unset;
+        border-radius: 50% 0 0 50%;
+
+        .icon {
+          margin-left: 0;
+          width: 22px;
+          height: 22px;
+        }
+      }
+      .button__label {
+        display: none;
+      }
+    }
+  }
 }
 
 // The following wrapper classes are temporary to fix page specific issues
