--- a/ui/scss/component/_file-drop.scss
+++ b/ui/scss/component/_file-drop.scss
@@ -4,7 +4,7 @@
   position: fixed;
   background: var(--color-background-overlay);
   opacity: 0;
-  height: 20%;
+  height: 32%;
   width: 100%;
   overflow: hidden;
   pointer-events: none;
@@ -14,6 +14,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  color: #fff;
 
   &.file-drop--show {
     opacity: 1;
