Design Fallout Patch 10 (#1340)
* Design Fallout Patch 10

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -262,7 +262,7 @@
 
 .file-render__img-container {
   width: 100%;
-  aspect-ratio: 16 / 9;
+  // aspect-ratio: 16 / 9;
 }
 
 .file-render--post-container {
