--- a/ui/scss/component/_claim-list.scss
+++ b/ui/scss/component/_claim-list.scss
@@ -144,7 +144,7 @@
       width: 225px;
       padding-top: 4px;
       padding-right: 8px;
-      background-color: rgba(var(--color-primary-dynamic), 0.9);
+      background-color: var(--color-brand-blue);
       color: var(--color-primary-contrast);
       text-align: center;
       z-index: 1;
@@ -1146,7 +1146,7 @@
       width: 225px;
       padding-top: 4px;
       padding-right: 8px;
-      background-color: rgba(var(--color-primary-dynamic), 0.9);
+      background-color: var(--color-brand-blue);
       color: var(--color-primary-contrast);
       text-align: center;
       z-index: 1;
