--- a/ui/scss/component/_main.scss
+++ b/ui/scss/component/_main.scss
@@ -397,7 +397,7 @@ body {
       .button--file-action {
         &:hover {
           .icon {
-            stroke: white !important;
+            stroke: white;
           }
         }
       }
