--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -2,7 +2,7 @@
   // Color overrides
   --color-brand-blue: rgb(49, 135, 148);
   --color-brand: rgb(43, 187, 144);
-  --color-brand-contrast: var(--color-primary-contrast-static);
+  --color-brand-contrast: var(--color-white);
   --color-primary: rgb(43, 187, 144);
   --color-primary-static: rgb(43, 187, 144);
   --color-primary-alt: rgb(62, 103, 93);
@@ -12,9 +12,7 @@
   --color-secondary-alt: #dbeafe;
   --color-secondary-alt-2: #bfdbfe;
   --color-secondary-alt-3: #2c5c8c;
-  --color-primary-contrast-static: #ffffff;
   --color-primary-contrast: #ffffff;
-  --color-secondary-contrast-static: #ffffff;
   --color-secondary-contrast: #ffffff;
 
   // Structure
