--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -225,7 +225,6 @@ $actions-z-index: 2;
 
   .channel-staked__wrapper {
     height: var(--height-button);
-    background-color: var(--color-card-background);
     margin: auto;
     text-align: center;
     svg {
@@ -462,7 +461,6 @@ $actions-z-index: 2;
       // background: transparent;
       .channel__list-item,
       .channel-staked__wrapper {
-        background-color: var(--color-primary);
         .claim-preview__title {
           color: var(--color-primary-contrast);
         }
@@ -583,23 +581,14 @@ $actions-z-index: 2;
   z-index: 10;
   display: flex;
   position: absolute;
-  //text-align: center;
-  //width: 116%;
-  //left: -8%;
-  //bottom: -14%;
-  //
-  //svg {
-  //  overflow: visible;
-  //  width: 100%;
-  //  height: 100%;
-  //}
   padding: 0.2rem;
   bottom: -0.5rem;
   right: -0.5rem;
-  //background-color: white;
-  background-color: var(--color-card-background);
-  //box-shadow: 0px 0px 8px -3px rgba(255,255,255,1);
   border-radius: 50%;
+
+  svg {
+    fill: var(--color-brand-blue);
+  }
 }
 
 .channel-staked__wrapper--large {
