fix overlay buttons on collection page

--- a/ui/scss/init/_gui.scss
+++ b/ui/scss/init/_gui.scss
@@ -752,7 +752,7 @@ img {
 .playlistPage-wrapper {
   .button--file-action {
     &:hover {
-      background-color: unset;
+      background-color: var(--color-gray-9);
     }
   }
 
