fix header buttons

--- a/ui/scss/component/_header.scss
+++ b/ui/scss/component/_header.scss
@@ -314,7 +314,7 @@
   background-color: var(--color-header-button);
   border-radius: 1.5rem;
   margin-right: var(--spacing-s);
-  color: var(--color-brand-contrast);
+  color: var(--color-header-button-text);
   &:hover {
     .icon {
       stroke: var(--color-primary);
