--- a/ui/scss/themes/dark.scss
+++ b/ui/scss/themes/dark.scss
@@ -39,6 +39,7 @@
   --color-header-button-active: var(--color-gray-6);
   --color-header-button-base: 45, 45, 45;
   --color-header-button: rgba(var(--color-header-button-base), 0.7);
+  --color-header-button-text: var(--color-white);
   --color-header-background-base: 17, 17, 17;
   --color-header-background: rgba(var(--color-header-background-base), 0.9);
   --color-header-background-transparent: rgba(7, 3, 3, 0.95);
