--- a/ui/scss/themes/light.scss
+++ b/ui/scss/themes/light.scss
@@ -44,6 +44,7 @@
 
   // Header
   --color-header-button: var(--color-button-alt-bg);
+  --color-header-button-text: var(--color-black);
   --color-header-background: #ffffff;
 
   // Button
