--- a/ui/scss/component/_navigation.scss
+++ b/ui/scss/component/_navigation.scss
@@ -235,6 +235,10 @@
         margin-left: 0;
       }
     }
+
+    .comment__badge {
+      margin-left: var(--spacing-xxs);
+    }
   }
 
   &:hover:not(.navigation-link--active) {
