Filepage theater fix (#1366)
* Disable theater mode for non-video files

* Add black background to image container

--- a/ui/scss/component/_file-render.scss
+++ b/ui/scss/component/_file-render.scss
@@ -263,6 +263,8 @@
 .file-render__img-container {
   width: 100%;
   // aspect-ratio: 16 / 9;
+  background-color: #000000;
+  border-radius: var(--border-radius);
 }
 
 .file-render--post-container {
